<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/AccountView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_card">

            <ImageView
                android:id="@+id/back_More"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/Account_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/Account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/more_options_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AccountView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:padding="8dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/Default"/>

        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:padding="8dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/Default"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@drawable/border"
            android:padding="12dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:id="@+id/delete_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginStart="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/trash"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingTop="3dp"/>

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
