<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Top CardView (Header) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/MoreView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_card">

            <ImageView
                android:id="@+id/back_More"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Settings and activity"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="22sp"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Option List -->
    <LinearLayout
        android:id="@+id/more_options_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MoreView">

        <!-- Account Option -->
        <LinearLayout
            android:id="@+id/account_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/User"
                app:tint="@color/black" />

            <TextView
                style="@style/MoreOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Account"
                android:textColor="@color/Default" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="205dp"
                android:src="@drawable/arrow_right"
                app:tint="@color/Default" />
        </LinearLayout>

        <!-- Notifications Option with Switch -->
        <LinearLayout
            android:id="@+id/notifications_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/Bell"
                android:layout_marginEnd="16dp"
                app:tint="@color/black" />

            <TextView
                style="@style/MoreOptionStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:textColor="@color/Default"
                android:paddingEnd="8dp"
                android:text="@string/Notifications" />

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <!-- Language Option -->
        <LinearLayout
            android:id="@+id/language_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/Globe"
                android:layout_marginEnd="16dp"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MoreOptionStyle"
                android:textColor="@color/Default"
                android:text="@string/Language" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="190dp"
                android:src="@drawable/arrow_right"
                app:tint="@color/Default" />
        </LinearLayout>

        <!-- FAQ Option -->
        <LinearLayout
            android:id="@+id/faq_option"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/FAQ"
                app:tint="@color/black" />

            <TextView
                style="@style/MoreOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FAQ"
                android:textColor="@color/Default" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="245dp"
                android:src="@drawable/arrow_right"
                app:tint="@color/Default" />
        </LinearLayout>

        <!-- Logout Option -->
        <LinearLayout
            android:id="@+id/logout_option"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/Logout"
                app:tint="@color/black" />

            <TextView
                style="@style/MoreOptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Default"
                android:text="@string/Logout" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_right"
                android:layout_marginStart="220dp"
                app:tint="@color/Default" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
